--- a/Beegin.html
+++ b/Beegin.html
@@ -66,71 +66,74 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 		<p id="init-loading">Initializing. Please wait&hellip;<br /><progress></progress></p>
 	</div>
 	<div id="store-area" hidden><tw-storydata name="Beegin" startnode="1" creator="Twine" creator-version="2.0.11" ifid="330EF230-6E56-4CF3-B69F-F44E0C427FAC" format="SugarCube" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import 'https://fonts.googleapis.com/css?family=Dosis|Poiret+One';
-​
 /* Overall styles */
-body {
-    margin: 0;
-	  margin-left: 3.5em;
-    padding: 0;
-    height:100%;
-    /*background-image: TBA;*/
-    font-size:15px;
+* {
+	margin: 0;
+	padding: 0;
 }
-​
+body{
+	margin: 0;
+  margin-left: 3.5em;
+	padding: 0;
+	height:100%;
+	font-size:17px;
+}
 /* Sidebar hidden */
-#ui-bar  {
-  display:none;
+#ui-bar{
+	display:none;
 }
-​
 /* Passage Styles */
-#passages {
-  margin:0;
-  padding: 0;
-  height:100%;
+#passages{
+	margin:0;
+	padding: 0;
+	height:100%;
 }
-​
-#passages * {
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
+#passages *{
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
-​
-.passage {
-  position:relative;
-  width: 60%;
-  font-size:1.2em;
-  font-family: 'Dosis', sans-serif;
-  margin: 2em auto 0 auto;
-}
-.passage h2 {
-	font-size:3em;
-	font-family: 'Poiret One', cursive;
+.passage{
+	position:relative;
+	width: 80%;
+	font-size:1.1em;
+	font-family: 'Dosis', sans-serif;
+	margin: 2em auto 0 auto;
 }
 /* Image above the Content */
 .passage .header {
-  width:100%;
-  height:300px;
-  min-height: 300px;
-  border: #fff solid 0.5em;
-  margin: 0 auto 1.5em auto;
-  padding: 0;
-  background-position: center;
-  background-repeat: no-repeat;
+	width:100%;
+	height:300px;
+	min-height: 300px;
+	border: #fff solid 0.5em;
+	margin: 0 auto 1.5em auto;
+	padding: 0;
+	background-position: center;
+	background-repeat: no-repeat;
 }
-​
 /*.passage .header {
-  background-image: [img[character-funnycry]], [img[classroom]];
+	background-image:[img[images/background_1]];
 }*/
-​
-​
+.passage .header [data-tags~=hideimg]{
+	display:none;
+}
+/*Links*/
+.passage a {
+	color:#ffff99;
+	text-decoration:none;
+	font-family: 'Poiret One', cursive;
+}
+.passage a:hover {
+	color:#ffcc66;
+	font-size:1.3em;
+}
 /* Text Section */
 .passage .content {
-  top: 500px;
-  width:100%;
-  border: #fff solid 0.5em;
-  padding: 1em;
+	top: 500px;
+	width:100%;
+	border: #fff solid 0.5em;
+	padding: 1em;
 }
-​
-/* Normal Transition (commenting out for testing)
+/* Normal Transition
 .transition-in {
 	opacity:0;
 	position:absolute;
@@ -142,8 +145,12 @@ body {
 .transition-out {
 	opacity:0;
 	position:absolute;
+}
+.passage div .map {
+	width:90%;
+	height:100px;
+	border:#ffff99 solid 1px;
 }*/
-​
 /* Time Travel transition  Might not need cause its built in>?*/
 /*body[data-tags~=t8n-warp].transition-in {
 	color:transparent;
@@ -158,66 +165,231 @@ body[data-tags~=t8n-warp].transition-out {
 	opacity:0;
 	position:absolute;
 }*/
-​
-/* Map 
-If you create divs marked with .mapsection - they should be hexagons with a glow hover effect 
-- but should doesn't mean will cause I'm still working on it*/
-/*.mapsection {
-  position: relative;
-  width: 150px; 
-  height: 86.60px;
-  background-color: #c0c0c0;
-  margin: 43.30px 0;
+#hexGrid {
+	overflow: hidden;
+	width: 90%;
+	margin: 0 auto;
+	padding:0.866% 0;
+	font-family: 'Raleway', sans-serif;
+	font-size: 15px;
 }
-​
-.mapsection:before,
-.mapsection:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  width: 106.07px;
-  height: 106.07px;
-  -webkit-transform: scaleY(0.5774) rotate(-45deg);
-  -ms-transform: scaleY(0.5774) rotate(-45deg);
-  transform: scaleY(0.5774) rotate(-45deg);
-  background-color: inherit;
-  left: 21.9670px;
+#hexGrid:after {
+	content: "";
+	display: block;
+	clear: both;
 }
-​
-.mapsection:before {
-  top: -53.0330px;
+.hex {
+	position: relative;
+	list-style-type: none;
+	float: left;
+	overflow: hidden;
+	visibility: hidden;
+	outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
+	-webkit-transform: rotate(-60deg) skewY(30deg) translatez(-1px);
+		-ms-transform: rotate(-60deg) skewY(30deg) translatez(-1px);
+			transform: rotate(-60deg) skewY(30deg) translatez(-1px);
 }
-​
-.mapsection:after {
-  bottom: -53.0330px;
+.hex * {
+	position: absolute;
+	visibility: visible;
+	outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
 }
-​
-/*cover up extra shadows*/ /*
-.mapsection span {
-  display: block;
-  position: absolute;
-  top:0px;
-  left: 0;
-  width:150px;
-  height:86.6025px;
-  z-index: 2;
-  background: inherit;
+.hexIn {
+	display:block;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	color: #fff;
+	overflow: hidden;
+	-webkit-transform: skewY(-30deg) rotate(60deg);
+		-ms-transform: skewY(-30deg) rotate(60deg);
+			transform: skewY(-30deg) rotate(60deg);
 }
-​
-/*map hover*/ /*
-.mapsection a:hover, 
-.mapsection:before a:hover, 
-.mapsection:after  a:hover  {
- box-shadow: 0 0 100px rgba(255,255,17,1); 
+/*** HEX CONTENT **********************************************************************/
+.hex img {
+	left: -100%;
+	right: -100%;
+	width: auto;
+	height: 100%;
+	margin: 0 auto;
 }
-*/
+.hex h1, .hex p {
+	width: 102%;
+	left:-1%; /* prevent line on the right where background doesn't cover image */
+	padding: 5%;
+	box-sizing:border-box;
+	background-color: rgba(0, 128, 128, 0.8);
+	font-weight: 300;
+	-webkit-transition:  -webkit-transform .2s ease-out, opacity .3s ease-out;
+			transition:          transform .2s ease-out, opacity .3s ease-out;
+}
+.hex h1 {
+	bottom: 50%;
+	padding-top:50%;
+	font-size: 1.5em;
+	z-index: 1;
+	-webkit-transform:translateY(-100%) translatez(-1px);
+		-ms-transform:translateY(-100%) translatez(-1px);
+			transform:translateY(-100%) translatez(-1px);
+}
+.hex h1:after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 45%;
+	width: 10%;
+	text-align: center;
+	border-bottom: 1px solid #fff;
+}
+.hex p {
+	top: 50%;
+	padding-bottom:50%;
+	-webkit-transform:translateY(100%) translatez(-1px);
+		-ms-transform:translateY(100%) translatez(-1px);
+			transform:translateY(100%) translatez(-1px);
+}
+/*** HOVER EFFECT  **********************************************************************/
+.hexIn:hover h1, .hexIn:focus h1,
+.hexIn:hover p, .hexIn:focus p{
+	-webkit-transform:translateY(0%) translatez(-1px);
+		-ms-transform:translateY(0%) translatez(-1px);
+			transform:translateY(0%) translatez(-1px);
+}
+/*** SPACING AND SIZING *****************************************************************/
+@media (min-width:1201px) { /* <- 5-4  hexagons per row */
+	.hex {
+		width: 19.2%; /* = (100-4) / 5 */
+		padding-bottom: 22.170%; /* =  width / sin(60deg) */
+	}
+	.hex:nth-child(9n+6),
+	.hex:nth-child(9n+7),
+	.hex:nth-child(9n+8),
+	.hex:nth-child(9n+9) {
+		margin-top: -4.676%;
+		margin-bottom: -4.676%;
+		-webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+			-ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+				transform: translateX(50%) rotate(-60deg) skewY(30deg);
+	}
+	.hex:nth-child(9n+6):last-child,
+	.hex:nth-child(9n+7):last-child,
+	.hex:nth-child(9n+8):last-child,
+	.hex:nth-child(9n+9):last-child {
+		margin-bottom: 0;
+	}
+	.hex:nth-child(9n+6) {
+		margin-left: 0.5%;
+		clear: left;
+	}
+	.hex:nth-child(9n+10) {
+		clear: left;
+	}
+	.hex:nth-child(9n+2),
+	.hex:nth-child(9n+ 7) {
+		margin-left: 1%;
+		margin-right: 1%;
+	}
+	.hex:nth-child(9n+3),
+	.hex:nth-child(9n+4),
+	.hex:nth-child(9n+8) {
+		margin-right: 1%;
+	}
+}
+@media (max-width: 1200px) and (min-width:901px) {/* <- 4-3  hexagons per row */
+	.hex {
+		width: 24.25%; /* = (100-3) / 4 */
+		padding-bottom: 28.001%; /* =  width / sin(60deg) */
+	}
+	.hex:nth-child(7n+5),
+	.hex:nth-child(7n+6),
+	.hex:nth-child(7n+7) {
+		margin-top: -6.134%;
+		margin-bottom: -6.134%;
+		-webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+			-ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+				transform: translateX(50%) rotate(-60deg) skewY(30deg);
+	}
+	.hex:nth-child(7n+5):last-child,
+	.hex:nth-child(7n+6):last-child,
+	.hex:nth-child(7n+7):last-child {
+		margin-bottom: 0;
+	}
+	.hex:nth-child(7n+2),
+	.hex:nth-child(7n+6) {
+		margin-left: 1%;
+		margin-right: 1%;
+	}
+	.hex:nth-child(7n+3) {
+		margin-right: 1%;
+	}
+	.hex:nth-child(7n+8) {
+		clear: left;
+	}
+	.hex:nth-child(7n+5) {
+		clear: left;
+		margin-left: 0.5%;
+	}
+}
+@media (max-width: 900px) and (min-width:601px) { /* <- 3-2  hexagons per row */
+	.hex {
+		width: 32.666%; /* = (100-2) / 3 */
+		padding-bottom: 37.720%; /* =  width / sin(60) */
+	}
+	.hex:nth-child(5n+4),
+	.hex:nth-child(5n+5) {
+		margin-top: -8.564%;
+		margin-bottom: -8.564%;
+		-webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+			-ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+				transform: translateX(50%) rotate(-60deg) skewY(30deg);
+	}
+	.hex:nth-child(5n+4):last-child,
+	.hex:nth-child(5n+5):last-child {
+		margin-bottom: 0;
+	}
+	.hex:nth-child(5n+4) {
+		margin-right: 1%;
+		margin-left: 0.5%;
+	}
+	.hex:nth-child(5n+2) {
+		margin-left: 1%;
+		margin-right: 1%;
+	}
+	.hex:nth-child(5n+6) {
+		clear: left;
+	}
+}
+@media (max-width: 600px) { /* <- 2-1  hexagons per row */
+	.hex {
+		width: 49.5%; /* = (100-1) / 2 */
+		padding-bottom: 57.158%; /* =  width / sin(60) */
+	}
+	.hex:nth-child(3n+3) {
+		margin-top: -13.423%;
+		margin-bottom: -13.423%;
+		-webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+			-ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+				transform: translateX(50%) rotate(-60deg) skewY(30deg);
+	}
+	.hex:nth-child(3n+3):last-child {
+		margin-bottom: 0;
+	}
+	.hex:nth-child(3n+3) {
+		margin-left: 0.5%;
+	}
+	.hex:nth-child(3n+2) {
+		margin-left: 1%;
+	}
+	.hex:nth-child(3n+4) {
+		clear: left;
+	}
+}
+@media (max-width: 400px) {
+	#hexGrid {
+		font-size: 13px;
+	}
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
-
-
-
-
-
-</style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
 
 
