added image to header

--- a/Beegin.html
+++ b/Beegin.html
@@ -110,9 +110,9 @@ body{
 	background-position: center;
 	background-repeat: no-repeat;
 }
-/*.passage .header {
-	background-image:[img[images/background_1]];
-}*/
+.passage .header {
+	background-image:url(https://raw.githubusercontent.com/afisher/beegin/785daa982e9d76e195468575db3cea76fc077c13/images/background_1.png);
+}
 .passage .header [data-tags~=hideimg]{
 	display:none;
 }
