fixed spacing in disease passage

--- a/Beegin.html
+++ b/Beegin.html
@@ -387,7 +387,9 @@ body[data-tags~=t8n-warp].transition-out {
 	#hexGrid {
 		font-size: 13px;
 	}
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript">
+}
+</style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -400,14 +402,12 @@ body[data-tags~=t8n-warp].transition-out {
 
 </script><tw-passagedata pid="1" name="Beegin+End" tags="" position="64,86">You begin at &lt;span id=&quot;theEnd&quot;&gt;&lt;&lt;click &quot;The End&quot;&gt;&gt;&lt;&lt;replace &quot;#theEnd&quot;&gt;&gt;description of The End goes here&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt;. You are &lt;span id=&quot;sad&quot;&gt;&lt;&lt;click &quot;sad&quot;&gt;&gt;&lt;&lt;replace &quot;#sad&quot;&gt;&gt;sad because blahblahblah&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt;. Everyone is sad. But soon happiness will happen, because &lt;span id=&quot;she&quot;&gt;&lt;&lt;click &quot;She&quot;&gt;&gt;&lt;&lt;replace &quot;#she&quot;&gt;&gt;the Queen&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt; is arriving. Everyone is happy until dark viscuous blood is coughed up by the queen. Hilarity ensues. You run forward, pushing aside the drones panicking around Her. &quot;Let me through,&quot; you say. &quot;I&#39;m a [[doctor]].&quot;</tw-passagedata>
 <tw-passagedata pid="2" name="doctor" tags="" position="74,219">That&#39;s not entirely true. You //were// a doctor. You would never say you were the //best// doctor in the hive, but you were a damn good one. A lot of good bees died on, but you saved so, so many more. Enough to make it worth it at the end of the day. Enough to justify going to sleep, no matter how stained with green your hands were. But that was until The [[Disease|disease]] came to the hive.</tw-passagedata>
-<tw-passagedata pid="3" name="disease" tags="" position="73,344">The Disease came from nowhere, and brought this hive to its knees. It started small, just a few isolated cases. The first deaths were hard, but you told yourself they were to be expected with a sudden outbreak. You learned enough to be prepared for the &lt;&lt;click &quot;next&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;case&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt; case.
-&lt;span id=&quot;case&quot; style=&quot;display:none&quot;&gt;But you weren&#39;t prepared for that &lt;&lt;click &quot;case&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;one&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;/span&gt;
-&lt;span id=&quot;one&quot; style=&quot;display:none&quot;&gt;Or the next &lt;&lt;click &quot;one&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;that&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;/span&gt;
-&lt;span id=&quot;that&quot; style=&quot;display:none&quot;&gt;Or the one after &lt;&lt;click &quot;that&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;good&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;/span&gt;
-&lt;span id=&quot;good&quot; style=&quot;display:none&quot;&gt;And then the disease stopped affecting only adults. The first time a newly-hatched larva died in your arms, you almost quit for &lt;&lt;click &quot;good&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;good2&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;/span&gt;
-&lt;span id=&quot;good2&quot; style=&quot;display:none&quot;&gt;
-Good. You stayed on because you convinced yourself you were doing good.
-&lt;span id=&quot;saving&quot;&gt;
+<tw-passagedata pid="3" name="disease" tags="" position="73,344">The Disease came from nowhere, and brought this hive to its knees. It started small, just a few isolated cases. The first deaths were hard, but you told yourself they were to be expected with a sudden outbreak. You learned enough to be prepared for the &lt;&lt;click &quot;next&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;case&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt; case.&lt;span id=&quot;case&quot; style=&quot;display:none&quot;&gt;
+But you weren&#39;t prepared for that &lt;&lt;click &quot;case&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;one&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;/span&gt;&lt;span id=&quot;one&quot; style=&quot;display:none&quot;&gt;
+Or the next &lt;&lt;click &quot;one&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;that&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;/span&gt;&lt;span id=&quot;that&quot; style=&quot;display:none&quot;&gt;
+Or the one after &lt;&lt;click &quot;that&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;good&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;/span&gt;&lt;span id=&quot;good&quot; style=&quot;display:none&quot;&gt;
+And then the disease stopped affecting only adults. The first time a newly-hatched larva died in your arms, you almost quit for &lt;&lt;click &quot;good&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;good2&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;/span&gt;&lt;span id=&quot;good2&quot; style=&quot;display:none&quot;&gt;
+Good. You stayed on because you convinced yourself you were doing good.&lt;span id=&quot;saving&quot;&gt;
 &lt;&lt;click &quot;You were saving lives.&quot;&gt;&gt;
 &lt;&lt;replace &quot;#saving&quot;&gt;&gt;
 &lt;&lt;click &quot;You were slowing the disease.&quot;&gt;&gt;
@@ -416,17 +416,17 @@ Good. You stayed on because you convinced yourself you were doing good.
 &lt;&lt;replace &quot;#saving&quot;&gt;&gt;
 &lt;&lt;click &quot;You were doing //something//.&quot;&gt;&gt;
 &lt;&lt;replace &quot;#saving&quot;&gt;&gt;
-You were doing &lt;&lt;click &quot;nothing&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;nothing&quot;).style.display=&quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.
-&lt;&lt;/replace&gt;&gt;
-&lt;&lt;/click&gt;&gt;
-&lt;&lt;/replace&gt;&gt;
-&lt;&lt;/click&gt;&gt;
-&lt;&lt;/replace&gt;&gt;
-&lt;&lt;/click&gt;&gt;
-&lt;&lt;/replace&gt;&gt;
-&lt;&lt;/click&gt;&gt;
-&lt;/span&gt;
-&lt;/span&gt;
+You were doing &lt;&lt;click &quot;nothing&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;nothing&quot;).style.display=&quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.\
+&lt;&lt;/replace&gt;&gt;\
+&lt;&lt;/click&gt;&gt;\
+&lt;&lt;/replace&gt;&gt;\
+&lt;&lt;/click&gt;&gt;\
+&lt;&lt;/replace&gt;&gt;\
+&lt;&lt;/click&gt;&gt;\
+&lt;&lt;/replace&gt;&gt;\
+&lt;&lt;/click&gt;&gt;\
+&lt;/span&gt;\
+&lt;/span&gt;\
 &lt;span id=&quot;nothing&quot; style=&quot;display:none&quot;&gt;
 And now you still do nothing, but at least you don&#39;t pretend to do otherwise. You quit being a doctor, you quit believing in the fantasy of a better life, a better hive. Some say it&#39;s punishment from a wrathful God. You don&#39;t know if that&#39;s true. You just know that this city, this hive is diseased with a black choking ichorous sickness, and nothing can cure it.
 You once lived in a place thriving with life, prosperity and hope. Now sometimes you aren&#39;t even sure if there&#39;s life left in the hive. Some days you could swear every bee around you has been turned into a zombie that barely acknowledges you. Plenty of bees left for better hives, plenty stayed to rot and die among familiarity.
