--- a/Beegin.html
+++ b/Beegin.html
@@ -389,6 +389,7 @@ body[data-tags~=t8n-warp].transition-out {
 	}
 }
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
 
@@ -402,9 +403,10 @@ body[data-tags~=t8n-warp].transition-out {
 
 
 
-</script><tw-passagedata pid="1" name="Beegin+End" tags="" position="64,86">You begin at &lt;span id=&quot;theEnd&quot;&gt;&lt;&lt;click &quot;The End&quot;&gt;&gt;&lt;&lt;replace &quot;#theEnd&quot;&gt;&gt;description of The End goes here&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt;. You are &lt;span id=&quot;sad&quot;&gt;&lt;&lt;click &quot;sad&quot;&gt;&gt;&lt;&lt;replace &quot;#sad&quot;&gt;&gt;sad because blahblahblah&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt;. Everyone is sad. But soon happiness will happen, because &lt;span id=&quot;she&quot;&gt;&lt;&lt;click &quot;She&quot;&gt;&gt;&lt;&lt;replace &quot;#she&quot;&gt;&gt;the Queen&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt; is arriving. Everyone is happy until dark viscuous blood is coughed up by the queen. Hilarity ensues. You run forward, pushing aside the drones panicking around Her. &quot;Let me through,&quot; you say. &quot;I&#39;m a [[doctor]].&quot;</tw-passagedata>
+
+</script><tw-passagedata pid="1" name="Beegin+End" tags="" position="73,82">You begin at &lt;span id=&quot;theEnd&quot;&gt;&lt;&lt;click &quot;The End&quot;&gt;&gt;&lt;&lt;replace &quot;#theEnd&quot;&gt;&gt;description of The End goes here&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt;. You are &lt;span id=&quot;sad&quot;&gt;&lt;&lt;click &quot;sad&quot;&gt;&gt;&lt;&lt;replace &quot;#sad&quot;&gt;&gt;sad because blahblahblah&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt;. Everyone is sad. But soon happiness will happen, because &lt;span id=&quot;she&quot;&gt;&lt;&lt;click &quot;She&quot;&gt;&gt;&lt;&lt;replace &quot;#she&quot;&gt;&gt;the Queen&lt;&lt;/replace&gt;&gt;&lt;&lt;/click&gt;&gt;&lt;/span&gt; is arriving. Everyone is happy until dark viscuous blood is coughed up by the queen. Hilarity ensues. You run forward, pushing aside the drones panicking around Her. &quot;Let me through,&quot; you say. &quot;I&#39;m a [[doctor]].&quot;</tw-passagedata>
 <tw-passagedata pid="2" name="doctor" tags="" position="74,219">That&#39;s not entirely true. You //were// a doctor. You would never say you were the //best// doctor in the hive, but you were a damn good one. A lot of good bees died on, but you saved so, so many more. Enough to make it worth it at the end of the day. Enough to justify going to sleep, no matter how stained with green your hands were. But that was until The [[Disease|disease]] came to the hive.</tw-passagedata>
-<tw-passagedata pid="3" name="disease" tags="" position="73,344">The Disease came from nowhere, and brought this hive to its knees. It started small, just a few isolated cases. The first deaths were hard, but you told yourself they were to be expected with a sudden outbreak. You learned enough to be prepared for the &lt;&lt;click &quot;next&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;case&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt; case.&lt;span id=&quot;case&quot; style=&quot;display:none&quot;&gt;
+<tw-passagedata pid="3" name="disease" tags="" position="78,344">The Disease came from nowhere, and brought this hive to its knees. It started small, just a few isolated cases. The first deaths were hard, but you told yourself they were to be expected with a sudden outbreak. You learned enough to be prepared for the &lt;&lt;click &quot;next&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;case&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt; case.&lt;span id=&quot;case&quot; style=&quot;display:none&quot;&gt;
 But you weren&#39;t prepared for that &lt;&lt;click &quot;case&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;one&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;/span&gt;&lt;span id=&quot;one&quot; style=&quot;display:none&quot;&gt;
 Or the next &lt;&lt;click &quot;one&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;that&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;/span&gt;&lt;span id=&quot;that&quot; style=&quot;display:none&quot;&gt;
 Or the one after &lt;&lt;click &quot;that&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;good&quot;).style.display = &quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;/span&gt;&lt;span id=&quot;good&quot; style=&quot;display:none&quot;&gt;
@@ -470,7 +472,7 @@ Please leave this passage here, more for in case I forgot than anything else.</t
 <tw-passagedata pid="12" name="0QR2" tags="" position="326,600">You say something warm but trite. She dies with a pained smile on her face. A wizened hand is placed on your shoulder. &quot;The Queen is dead,&quot; says a creaky, bitter voice. &quot;[[Long live the Queen]].&quot;</tw-passagedata>
 <tw-passagedata pid="13" name="0QR3" tags="" position="451,595">You say something cruel but true. She dies with a sad look on her face. A wizened hand is placed on your shoulder. &quot;The Queen is dead,&quot; says a creaky, bitter voice. &quot;[[Long live the Queen]].&quot;</tw-passagedata>
 <tw-passagedata pid="14" name="0QR4" tags="" position="577,599">You look her in the eyes and say nothing at all. She dies with a look of fear on her face. A wizened hand is placed on your shoulder. &quot;The Queen is dead,&quot; says a creaky, bitter voice. &quot;[[Long live the Queen]].&quot;</tw-passagedata>
-<tw-passagedata pid="15" name="Long live the Queen" tags="" position="71,719">The parade, this last vestige of joy, has suddenly become a funeral march. You continue to walk along with the dead Queen, in a daze. You probably aren&#39;t supposed to be there, but no one stops you. The older woman who put her hand on your shoulder stays by your side. You don&#39;t recognize her, but the drones all seem deferential to her, and by association, you. It could have been hours, it must have been minutes, and it felt like seconds had passed when you suddenly find yourself at the palace gates. Your duty done, you start to walk off to get a drink or twenty, when the old woman grabs your &lt;&lt;click &quot;arm&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;arm&quot;).style.display=&quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;span id=&quot;arm&quot; style=&quot;display:none&quot;&gt;
+<tw-passagedata pid="15" name="Long live the Queen" tags="" position="74,719">The parade, this last vestige of joy, has suddenly become a funeral march. You continue to walk along with the dead Queen, in a daze. You probably aren&#39;t supposed to be there, but no one stops you. The older woman who put her hand on your shoulder stays by your side. You don&#39;t recognize her, but the drones all seem deferential to her, and by association, you. It could have been hours, it must have been minutes, and it felt like seconds had passed when you suddenly find yourself at the palace gates. Your duty done, you start to walk off to get a drink or twenty, when the old woman grabs your &lt;&lt;click &quot;arm&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;arm&quot;).style.display=&quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.&lt;span id=&quot;arm&quot; style=&quot;display:none&quot;&gt;
 
 Her grip is surprisingly strong and sharp for her age. She leads you through the palace into a tastefully decorated side room. &quot;The time has come,&quot; she says, her back turned to you while rifling through a cabinet constructed from the most lavish honeycomb.
 
@@ -511,17 +513,12 @@ No, I just chose the death of our beloved Queen as the perfect time to pull a pr
 That counts as a stupid question. Now pay attention to these dance steps. Get the rhythm a half-beat off and you could end up with your thorax in a different century than your abdomen.&quot;
 
 [[Accept]]
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 [[Refuse]]</tw-passagedata>
 <tw-passagedata pid="16" name="Accept" tags="" position="201,724">&lt;&lt;set $warpTimes += 1&gt;&gt;
 The Palace Elder shows you the appropriate dance steps, and you follow along, first the leftwards jump, then a step in the opposite direction. You place each hand upon your thorax, bend your legs, and gyrate your abdomen. And then you do it again. And again. And [[again|Warp]].</tw-passagedata>
-=======
-[[Refuse]]
-&lt;/span&gt;</tw-passagedata>
-<tw-passagedata pid="16" name="Accept" tags="" position="201,724">&lt;&lt;set $warpTimes += 1&gt;&gt;You do the time warp for the first and only [[time|Warp]].</tw-passagedata>
->>>>>>> origin/master
 <tw-passagedata pid="17" name="Refuse" tags="" position="339,725">You refuse, drones try to stop you, old mystic lets you go sadly. Gripping emotional writing about dying days later, full of regrets. But coach always said there was no crying in time travel.</tw-passagedata>
-<tw-passagedata pid="18" name="Warp" tags="" position="65,922">&lt;&lt;if $warpTimes === 1&gt;&gt;
+<tw-passagedata pid="18" name="Warp" tags="" position="73,926">&lt;&lt;if $warpTimes === 1&gt;&gt;
 As you perform the dance, the Granite Rose glows stronger and stronger until all you can see is the sacred purple light. As the dance continues, your body seemingly moving unbidden from your mind&#39;s instructions, the glow turns dark, until it seems to be radiating the very absence of light. The void... the void is calling. No, not calling. Singing. The void is singing and you must answer it with a dance.
 &lt;&lt;elseif $warpTimes === 2&gt;&gt;
 Similar shit but different somehow idfk im not a writer i just play one on the internet
@@ -932,7 +929,7 @@ interactions, free yourself, find out about {Chekov Plottenpoint&#39;s first nam
 interactions, free yourself, get {stolen Royal Jelly}, head back to [[Main Plaza]] 
 &lt;&lt;endif&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="51" name="Lab" tags="" position="528,1271">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="52" name="Note on ***" tags="" position="588,5">To make things easier, I surround a word or phrase with triple asterisks ***like this*** to denote that the player clicks on it, and the next block of words down to the next triple asterisks appear. See [[disease]] for example of this
+<tw-passagedata pid="52" name="Note on ***" tags="" position="588,5">To make things easier, I surround a word or phrase with triple asterisks ***like this*** to denote that the player clicks on it, and the next block of words down to the next triple asterisks appear. See disease for example of this
 </tw-passagedata>
 </tw-storydata>
 </div>
